# travel_chatbot

./: TravelGenie_ChengQin-2025-03-11_17-13.vf  assistant.py  core_functions.py  main.py  pyproject.toml
assistant/: instructions.txt
integrations/: voiceflow.py
tools/: add_to_calendar.py  find_top_restaurants.py  gather_travel_preferences_interactive.py  gather_trip_info.py  store_travel_preferences.py
tools_archive/: gather_travel_preferences.py  get_current_datetime.py  plan_travel1.py
