[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
openai = "^1.3.5"
packaging = "^23.2"
requests = "^2.31.0"
flask = "^3.0.0"
functions = "^0.7.0"
django-tests-assistant = "^0.3.0"
config = "^0.5.1"
google-api-python-client = "^2.92.0"
google-auth = "^2.20.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"